# lerpz-platform

./: .dockerignore  .gitignore  Cargo.toml  GUID.md  PROJECT.md  docker-compose.yml  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postgrestools.jsonc
.github/ISSUE_TEMPLATE/: user_story.md
.sqlx/: query-271c22bb64abc999bfc88d9a7fe442856e6154f70c8b19ce219085d4dee97381.json
docs/: GUID.md
lerpz-backend/: Cargo.toml
lerpz-backend/src/: main.rs
lerpz-backend/src/api/: mod.rs
lerpz-frontend/: Cargo.toml  Dockerfile  tailwind.css
lerpz-frontend/src/: app.rs  config.rs  lib.rs  main.rs  theme.rs
lerpz-frontend/src/components/: mod.rs  text.rs
lerpz-frontend/src/hooks/: auth.rs  mod.rs  theme.rs
lerpz-frontend/src/pages/: home.rs  mod.rs
lerpz-frontend/src/pages/dashboard/: groups.rs  mod.rs  overview.rs
lerpz-server/: Cargo.toml  Dockerfile
lerpz-server/src/: config.rs  error.rs  lib.rs  main.rs
lerpz-ui/: Cargo.toml
lerpz-utils/src/: env.rs
lib/core/: Cargo.toml
lib/core/src/db/: user.rs
lib/lerpz-axum/: Cargo.toml
lib/lerpz-axum/src/: error.rs  lib.rs  shutdown.rs
lib/lerpz-axum/src/middleware/: azure.rs  mod.rs  validate.rs
lib/lerpz-axum/src/middleware/azure/: config.rs  mod.rs  validation.rs
lib/lerpz-jwt/: Cargo.toml
lib/lerpz-jwt/src/: claims.rs  error.rs  lib.rs
lib/lerpz-model/: Cargo.toml
lib/lerpz-model/src/: auth.rs  lib.rs  oauth.rs  org.rs  user.rs
lib/lerpz-pwd/: Cargo.toml
lib/lerpz-pwd/benches/: hash_pwd.rs  validate_pwd.rs
lib/lerpz-pwd/src/: lib.rs
lib/lerpz-pwd/src/scheme/: mod.rs  scheme_01.rs
lib/lerpz-utils/: Cargo.toml
lib/lerpz-utils/src/: config.rs  env.rs  lib.rs  upn.rs
lib/utils/: Cargo.toml
lib/utils/src/: config.rs  lib.rs
lib/utils/src/axum/: error.rs  mod.rs
lib/utils/src/axum/middelware/: db.rs  mod.rs  validate.rs
lib/utils/src/jwt/: claims.rs  error.rs  mod.rs
lib/utils/src/pwd/: error.rs  mod.rs  parts.rs
lib/utils/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs
migrations/: 20250603115959_initial.sql
svc/auth/: .env.docker  .env.example  Cargo.toml  Dockerfile
svc/auth/assets/: authorize.css  authorize.html  authorize.js
svc/auth/src/: assets.rs  config.rs  email_verify.rs  lib.rs  login.rs  main.rs  pwd_reset.rs  register.rs  shutdown.rs  state.rs
svc/auth/src/api/: email_verify.rs  login.rs  mod.rs  pwd_forgot.rs  pwd_reset.rs  register.rs  token.rs
svc/auth/src/api/oauth/: assets.rs  authorize.rs  mod.rs  revoke.rs  token.rs  userinfo.rs
svc/auth/src/api/v1/: mod.rs
svc/auth/src/oauth/: authorize.rs  mod.rs  revoke.rs  token.rs  userinfo.rs
svc/auth/static/: authorize.html
svc/entra-mcp/: .env.docker  Cargo.toml
svc/entra-mcp/src/: config.rs  entra.rs  main.rs
svc/frontend/: .env.example  Cargo.toml  Dockerfile  eslint.config.mjs  next.config.ts  package.json  prettier.config.mjs  tailwind.css
svc/frontend/public/: manifest.json
svc/frontend/src/: app.rs  lib.rs
svc/frontend/src/app/: layout.tsx  page.tsx
svc/frontend/src/app/dashboard/: layout.tsx  page.tsx
svc/frontend/src/app/dashboard/[...not_found]/: page.tsx
svc/frontend/src/app/dashboard/overview/violations/: page.tsx
svc/frontend/src/app/signup/: page.tsx
svc/frontend/src/cmps/: card.rs  nav.rs
svc/frontend/src/components/: button.rs  msal-provider.tsx  text.rs  theme-button.tsx
svc/frontend/src/components/forms/: login-form.tsx
svc/frontend/src/components/nav/: app-sidebar.tsx  nav-group.tsx  nav-other.tsx  nav-user.tsx
svc/frontend/src/components/tables/: violations-table.tsx
svc/frontend/src/components/ui/: sidebar.tsx
svc/frontend/src/hooks/: auth.rs  theme.rs
svc/frontend/src/lib/: dashboard-routes.ts  routes.ts
svc/frontend/src/pages/: login.rs  mod.rs  register.rs
svc/frontend/src/pages/dashboard/: mod.rs  users.rs
svc/portal/: .env.docker  .env.example  Dockerfile  README.md  app.config.ts  components.json  eslint.config.mjs  next.config.ts  package.json  prettier.config.mjs  tsconfig.json
svc/portal-api/: .env.docker  .env.example  Cargo.toml
svc/portal-api/src/: config.rs  main.rs  state.rs
svc/portal-api/src/api/: mod.rs
svc/portal-api/src/api/dept/: list.rs  mod.rs
svc/portal/src/: app.css  app.tsx  entry-server.tsx
svc/portal/src/app/: globals.css
svc/portal/src/app/dashboard/: page.tsx
svc/portal/src/app/dashboard/[...not_found]/: page.tsx
svc/portal/src/app/dashboard/overview/violations/: page.tsx
svc/portal/src/app/dashboard/settings/general/: page.tsx
svc/portal/src/app/login/: page.tsx
svc/portal/src/component/: app-shell.tsx  auth-context.tsx  wrapper.tsx
svc/portal/src/component/ui/: accordion.tsx  button.tsx  card.tsx  carousel.tsx  checkbox.tsx  combobox.tsx  drawer.tsx  number-field.tsx  progress.tsx  select.tsx  sheet.tsx  skeleton.tsx  switch.tsx  tabs.tsx  textarea.tsx  textfield.tsx  tooltip.tsx
svc/portal/src/components/: query-provider.tsx
svc/portal/src/components/auth/: auth-button.tsx
svc/portal/src/components/forms/: signup-form.tsx
svc/portal/src/components/nav/: app-sidebar.tsx  nav-group.tsx  team-switcher.tsx
svc/portal/src/components/tables/: violations-table.tsx
svc/portal/src/components/theme/: button.tsx
svc/portal/src/lib/: Context.tsx  auth-client.ts  auth.ts  env.ts  index.ts  msalConfig.ts  server.ts
svc/portal/src/lib/auth/: client.ts  index.ts  server.ts
svc/portal/src/routes/: (protected).tsx  [...404].tsx  index.tsx  login.tsx
svc/portal/src/routes/(protected)/: [...404].tsx  dashboard.tsx  index.tsx
svc/portal/src/routes/(protected)/dashboard/: index.tsx
svc/portal/src/routes/api/auth/: *all.ts
svc/portal/src/routes/api/oauth/: [...oauth].ts
svc/portal/src/server/: env.ts
svc/relay/: .env.docker  .env.example  Cargo.toml  Dockerfile
svc/relay/src/: config.rs  main.rs
utils/: Cargo.toml
utils/src/: lib.rs
utils/src/axum/: error.rs
utils/src/jwt/: keys.rs
