[workspace]
resolver = "3"
members = ["lib/*", "svc/entra-mcp", "svc/portal-api"]
exclude = ["svc/portal"]

[workspace.package]
version = "0.1.0"
edition = "2024"
homepage = "https://identity.lerpz.com"
documentation = "https://docs.lerpz.com"
authors = ["Kasper Jønsson <kas@lerpz.com>"]

[workspace.dependencies]
# Internal
lerpz-axum = { path = "lib/lerpz-axum" }
lerpz-jwt = { path = "lib/lerpz-jwt" }
lerpz-model = { path = "lib/lerpz-model" }
lerpz-pwd = { path = "lib/lerpz-pwd" }
lerpz-utils = { path = "lib/lerpz-utils" }
# Database
bb8 = "0.9"
bb8-redis = "0.24"
redis = "0.32"
sqlx = "0.8"
# Axum, Tokio and Tower
axum = "0.8"
axum-extra = "0.10"
http = "1.3"
tokio = "1.47"
tokio-util = "0.7"
tower = "0.5"
tower-http = "0.6"
# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"
# Macro
quote = "1.0"
syn = "2.0"
# Serde
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
# MCP
rmcp = "0.6"
# Utilities
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
cfg-if = "1.0"
chrono = "0.4"
cookie = "0.18"
criterion = "0.7"
dotenvy = "0.15"
fluent-uri = "0.3"
hex = "0.4"
jsonwebtoken = "9.3"
mime_guess = "2.0"
rand = "0.9"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
schemars = "1.0"
strum = "0.27"
thiserror = "2.0"
url = "2.5"
uuid = "1.18"
validator = "0.20"
