[package]
name = "lerpz-server"
edition = "2024"
version.workspace = true

[dependencies]
# Internal
lerpz-utils = { path = "../lerpz-utils" }
# General
anyhow = { workspace = true }
axum = { workspace = true, features = ["tokio"] }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true } 
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
