[package]
name = "lerpz-ui"
edition = "2024"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = ["islands", "islands-router"] }
strum = { workspace = true, features = ["derive"] }
tailwind_fuse = { workspace = true, features = ["variant"] }
