[package]
name = "lerpz-core"
edition = "2024"
version.workspace = true

[dependencies]
chrono = { workspace = true, optional = true }
sqlx = { workspace = true, features = [
    "derive",
    "chrono",
    "uuid",
], optional = true }
uuid = { workspace = true, features = ["v4"], optional = true }

[features]
db = [
    "dep:chrono",
    "dep:sqlx",
    "dep:uuid",
    "uuid/v4"
]
