[package]
name = "lerpz-jwt"
edition = "2024"
version.workspace = true

[dependencies]
lerpz-model = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
