[package]
name = "lerpz-pwd"
edition = "2024"
version.workspace = true

[dependencies]
argon2 = { workspace = true, features = ["std"] }
hex = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
dotenvy = { workspace = true }

[[bench]]
name = "hash_pwd"
harness = false
