[package]
name = "lerpz-utils"
edition = "2024"
version.workspace = true

[dependencies]
anyhow = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
validator = { workspace = true, optional = true, features = ["derive"] }
regex = { workspace = true }
argon2 = { workspace = true, optional = true, features = ["std"] }

[dev-dependencies]
dotenvy = { workspace = true }

[features]
axum = [ 
    "dep:anyhow",
    "dep:axum",
    "dep:tokio",
    "dep:tracing",
    "dep:serde",
    "dep:sqlx",
    "dep:validator",
    "dep:uuid",
]
jwt = [
    "dep:jsonwebtoken",
    "dep:rand",
    "dep:serde",
    "dep:uuid",
    "chrono/serde",
]
pwd = [
    "dep:argon2",
    "dep:rand",
    "dep:uuid",
    "dep:validator",
]
