[package]
name = "lerpz-auth"
edition = "2024"
version.workspace = true

[dependencies]
# Internal
lerpz-utils = { path = "../../lib/utils", features = ["axum"] }
lerpz-core = { path = "../../lib/core", features = ["db"] }
# General
anyhow = { workspace = true }
axum = { workspace = true, features = ["tokio", "macros"] }
dotenvy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }
