[package]
name = "lerpz-auth"
edition = "2024"
version.workspace = true

[dependencies]
# Internal
lerpz-axum = { workspace = true }
lerpz-jwt = { workspace = true }
lerpz-model = { workspace = true }
lerpz-pwd = { workspace = true }
lerpz-utils = { workspace = true }
# General
anyhow = { workspace = true }
axum = { workspace = true, features = ["tokio", "macros"] }
axum-extra = { workspace = true, features = ["cookie"] }
chrono = { workspace = true }
dotenvy = { workspace = true }
mime_guess = { workspace = true }
redis = { workspace = true, features = ["tokio-native-tls-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
sqlx = { workspace = true, features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true, features = ["derive"] }
