[package]
name = "entra-mcp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
# Internal
lerpz-axum = { workspace = true }
lerpz-utils = { workspace = true }
# External
axum = { workspace = true }
dotenvy = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "auth",
    "schemars",
] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
