[package]
name = "lerpz-frontend"
edition = "2024"
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal
lerpz-utils = { path = "../../utils", optional = true }
# General
axum = { workspace = true, features = ["tokio"], optional = true }
axum-extra = { workspace = true, features = ["cookie"] }
cfg-if = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
console_log = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
leptos = { workspace = true, features = [
    "islands",
    "islands-router",
], optional = true }
leptos_axum = { workspace = true, features = [
    "islands-router",
], optional = true }
leptos_meta = { workspace = true, optional = true }
leptos_router = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
# serde_json = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"], optional = true }
tailwind_fuse = { workspace = true, features = ["variant"], optional = true }
tokio = { workspace = true, features = ["full"], optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = [
    "env-filter",
], optional = true }
wasm-bindgen = { workspace = true, optional = true }
web-sys = { workspace = true, features = [
    "Storage",
    "HtmlDocument",
], optional = true }
cookie = { workspace = true, optional = true }
http = { workspace = true, optional = true }
time = { version = "0.3.41", features = ["wasm-bindgen"] }

[features]
hydrate = [
    "dep:cfg-if",
    "dep:console_error_panic_hook",
    "dep:console_log",
    "dep:cookie",
    "dep:leptos_meta",
    "dep:leptos_router",
    "dep:lerpz-utils",
    "dep:serde",
    "dep:strum",
    "dep:tailwind_fuse",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "leptos/hydrate",
]
ssr = [
    "dep:axum",
    "dep:cfg-if",
    "dep:cookie",
    "dep:dotenvy",
    "dep:http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:leptos_meta",
    "dep:leptos_router",
    "dep:lerpz-utils",
    "dep:serde",
    "dep:strum",
    "dep:tailwind_fuse",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
# Build
output-name = "lerpz-frontend"
site-root = "target/site"
site-pkg-dir = "pkg"
assets-dir = "public"
# Environment
site-addr = "0.0.0.0:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
# Server Side Rendering
bin-features = ["ssr"]
bin-default-features = false
# Hydration 
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
# Tailwindcss
tailwind-input-file = "tailwind.css"
